<resources>
    <string name="app_name">ProjetAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Wolcame</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Offers</string>
    <string name="menu_slideshow">Order History</string>
    <string name="menu_tools">Cart List</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_share">Share To Friends</string>
    <string name="menu_lang">Change Language</string>
    <string name="menu_login">Login</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="password_hint">Enter Password</string>
    <string name="email_hint">Enter email</string>
    <string name="new_password">New Password</string>
    <string name="back">Back</string>

</resources>
