<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_home" />
        </group>
<group android:id="@+id/g2">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/discount"
            android:title="@string/menu_gallery" />
    </group>
<group android:id="@+id/g3">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_slideshow" />
    </group>
<group android:id="@+id/g4">
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_cartlist_black_24dp"
            android:title="@string/menu_tools" />
</group>
    <group android:id="@+id/g5">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/menu_share" />
    </group>
    <group android:id="@+id/g6">
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/newspaper"
            android:title="@string/menu_aboutus" />
    </group>
    <group android:id="@+id/g7">
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_lang" />
    </group>
    <group android:id="@+id/g8">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login_black_24dp"
            android:title="@string/menu_login" />
    </group>




</menu>
